tree-sitter-kiru/test/corpus/expressions.txt
==================
paths, chains, and expressions
==================

txt value = ::root::value + other::name;

fn run(rec project, txt message) {
  command({ Dir = project.dir, Env = "KIRU_MESSAGE=" + message }, "echo " + message);
  return ::helper() + project.name;
};

---

(source_file
  (text_binding
    (identifier)
    (expression
      (binary_expression
        (expression
          (path
            (root_namespace)
            (namespace
              (identifier))
            (identifier)))
        (expression
          (path
            (namespace
              (identifier))
            (identifier))))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier))
      (parameter
        (identifier)))
    (block
      (expression_statement
        (expression
          (call_expression
            (path
              (identifier))
            (argument_list
              (expression
                (record_literal
                  (record_field
                    (identifier)
                    (expression
                      (field_access
                        (path
                          (identifier))
                        (identifier))))
                  (record_field
                    (identifier)
                    (expression
                      (binary_expression
                        (expression
                          (string))
                        (expression
                          (path
                            (identifier))))))))
              (expression
                (binary_expression
                  (expression
                    (string))
                  (expression
                    (path
                      (identifier)))))))))
      (return_statement
        (expression
          (binary_expression
            (expression
              (call_expression
                (path
                  (root_namespace)
                  (identifier))
                (argument_list)))
            (expression
              (field_access
                (path
                  (identifier))
                (identifier)))))))))
