tree-sitter-kiru/test/corpus/functions.txt
==================
function declarations
==================

fn report(txt label, txt code) {
  return "  " + label + ": " + code + "\n";
};

fn stop() {
  return;
};

fn end() {
  panic;
};

fn main(rec args) {
};

fn empty() {
};

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier))
      (parameter
        (identifier)))
    (block
      (return_statement
        (expression
          (binary_expression
            (expression
              (binary_expression
                (expression
                  (binary_expression
                    (expression
                      (binary_expression
                        (expression
                          (string))
                        (expression
                          (path
                            (identifier)))))
                    (expression
                      (string))))
                (expression
                  (path
                    (identifier)))))
            (expression
              (string)))))))
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (return_statement)))
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (panic_statement)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)))
    (block))
  (function_declaration
    (identifier)
    (parameter_list)
    (block)))
