tree-sitter-kiru/test/corpus/statements.txt
==================
statements
==================

fn work(rec project) {
  txt log = "";

  rec local = {
    name = "step",
  };

  log = log + "x";
  std::async(work());
  std::wait();
  std::command({ Env = "KIRU_MESSAGE=" + log, Mode = "stdout" }, "echo hi");
  defer {
    std::command({ Mode = "stdout" }, "rm -rf " + log);
  };
  panic;
};

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)))
    (block
      (text_binding
        (identifier)
        (expression
          (string)))
      (record_binding
        (identifier)
        (record_literal
          (record_field
            (identifier)
            (expression
              (string)))))
      (assignment_statement
        (identifier)
        (expression
          (binary_expression
            (expression
              (path
                (identifier)))
            (expression
              (string)))))
      (expression_statement
        (expression
          (call_expression
            (path
              (namespace
                (identifier))
              (identifier))
            (argument_list
              (expression
                (call_expression
                  (path
                    (identifier))
                  (argument_list)))))))
      (expression_statement
        (expression
          (call_expression
            (path
              (namespace
                (identifier))
              (identifier))
            (argument_list))))
      (expression_statement
        (expression
          (call_expression
            (path
              (namespace
                (identifier))
              (identifier))
            (argument_list
              (expression
                (record_literal
                  (record_field
                    (identifier)
                    (expression
                      (binary_expression
                        (expression
                          (string))
                        (expression
                          (path
                            (identifier))))))
                  (record_field
                    (identifier)
                    (expression
                      (string)))))
              (expression
                (string))))))
      (defer_statement
        (block
          (expression_statement
            (expression
              (call_expression
                (path
                  (namespace
                    (identifier))
                  (identifier))
                (argument_list
                  (expression
                    (record_literal
                      (record_field
                        (identifier)
                        (expression
                          (string)))))
                  (expression
                    (binary_expression
                      (expression
                        (string))
                      (expression
                        (path
                          (identifier)))))))))))
      (panic_statement))))
