tree-sitter-kiru/test/corpus/strings_comments.txt
==================
strings and comments
==================

# a leading comment
txt banner = "line one
line two\twith escape \"quoted\""; # trailing comment

---

(source_file
  (comment)
  (text_binding
    (identifier)
    (expression
      (string)))
  (comment))
